--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,137 +1,193 @@
 a:hover{
+
     text-decoration: none;
+
 }
 
 h1{
+
     font-size: 18px;
+
 }
 
 h2{
+
     font-size: 16px;
+
 }
 
 .cabecera {
 
-   background-image: url("../img/bg-red-mobile.png");
+   /* margin-top: -5em;*/
+    background-color: red;
+    clip-path:polygon(0 0, 100% 0, 100% 100%, 0% 89%);
+   /* shape-outside: polygon(0 0, 100% 0, 100% 100%, 0% 85%);
+    float: right;
+    z-index: 20;
+    shape-margin: 20px;*/
+    width: 100%;
+    padding-bottom: 100px;
 
-   background-size: cover;
-    height: 800px;
-    margin-bottom: -140px; 
-    
-
-}
-
-.cabecera p{
-    font-size: 12px;
-    
 }
 
 header{
-    z-index: 10;
-    height: 2em;
+
+    z-index: 2;
+    height: 3em;  
+    display: flex;
+    justify-content: space-between;  
+    padding-top: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    margin-bottom: -3em;
+
 }
+
 .cont-logo{
+
     width: 2em;
     z-index: 2;
+
 }
+
 #logo{
 
     /*width: 2em;*/
     height: 2em;
+
 }
+
 #logo-dk{
-    display: none;
-}
-
-.desktop-nav{
 
     display: none;
+
 }
 
-.mobile-nav{
-    z-index: 2;
-    width: 2em;
+.top-nav{
+
+    z-index: 3;
+    height: 3em;
     
 }
 
-/*.hamburger{
-   /* width: 2em;
+.hamburger{
+
+   /* width: 2em*/
+    z-index: 3;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.hamburger img{
+
+   z-index: 2;
+   height: 2em;
+   width: 2em;
+
+}
+
+.links-wrapper{
+
+    display: none;
+    height: 4em;
+
+}
+
+/*#menu{
+
+  /*  width: 100%;
+
 }*/
 
-#menu{
-    display: none;
-    width: 100%;
-}
+#menu li{
 
-#menu{
-    width: 100%;
-} 
-
-#menu ul li{
-    width: 100%;
-    
-    background-color: black;
-    
+  /*  width: 100%;*/    
+    background-color: black;    
     color:white;
+
 }
 
-#menu ul li a{
+#menu li a{
 
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
+/*main{
 
-.mobile-nav img{
-    z-index: 2;
-    width: 2em;
-    height: 2em;
-     
-}
+    margin-top: -5em;
+
+}*/
+
+/*.banner-wrapper{
+
+    /*width: 100%;
+
+}*/
 
 .banner{
-    position: relative;
+
     width: 100%;
-    height: 300px;
-    margin-right: -15px;
+    /*height: 300px;
+    /*margin-right: -15px;*/
+
 }
 
 .chairs-mobile{
-    position: absolute;
-    top: -2em;
+
+    /*position: absolute;*/
+    /*top: -2em;*/
     width: 100%;
-    height: 300px;
+    /*height: 300px;*/
+    opacity: 0.5;
     
 }
 
 .chairs-desktop{
+
     display: none;
+
 }
 
 .titular{
-position: absolute;
-bottom: -30px;
-width: 205px;
-height: 160px;
-background-color: white;
+
+    /*position: absolute;*/
+    margin-top: -120px;
+    width: 205px;
+    height: 160px;
+    background-color: white;
 
 }
 
-.atras, .adelante{
+.titular p{
+
+    font-size: 12px;
+    
+}
+
+.adelante{
+
     display: none;
+
 }
 
 .sec-carrousel{
-    position: absolute;
-    bottom: 30px;
-    /*width:100%;*/
-    /*margin-top: -100px;*/
+
+    margin-top: 30px;
+
 }
 
-/*.carrousel{
-/*width: 100%;
+/*.crsl-container{
+
+    padding-right: 0;
+
 }*/
 
 #titulo-carrusel{
+
     color:white;
     font-family: 'Oswald', sans-serif;
     font-weight: 900;
@@ -141,103 +197,133 @@ background-color: white;
 .img-container{
 
     overflow: hidden;
+    /*padding-right: 0;*/
+
+}
+
+.crsl{
+
+    padding-left: 0;
+    padding-right: 0;
+
 }
 
 .producto{
+
+    /*width: 45vw;*/
     background-color: #ff0000;
-    padding: 5px 5px 5px 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 0;
+
 }
 
 .precio{
 
     background-color: white;
-    border-radius: 20px;
-    text-align: center;
-    
+    border-radius: 15px;
+    text-align: center;    
     padding: 0.25rem 0 0 0;
 
 }
 
 .img-producto{
+
     border-color: white;
     border-style: solid;
+    margin-bottom: 2px;
 
 }
 
-/*.prod-4, .prod-5, .prod-6{
-    display: none;
-} 
-*/
-.cel-info{
+/*.cel-text{
 
-    margin-top: 0px;
-    
-}
+    margin-bottom: -80px;
 
-.texto-desktop{
-
-    display: none;
-}
+}*/
 
 .texto-mobile{
     
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 0;
+    height: 120px;
+    width: 100%;
     
+}
+
+.p-mov{
+
+    font-size: calc(0.6vw + 12px);
+    font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 0;
+    /*text-align: center;*/
 
 }
 
-.cel-foto-wrapper{
+.cel-img-wrapper{
 
-    padding-right: 0;
-    padding-left: 0;
-    margin-right: 0;
-    margin-left: 0; 
+    margin-left: -15px;
+    margin-right: -15px;
+
 }
 
 .cel-img{
+
     width: 100%;
-    margin-top: -120px;
+    margin-top: -50px;
+  /*  shape-outside: polygon(0 0, 100% 20%, 100% 100%, 0 100%);
+    float: left;                
+    z-index: 20;
+    shape-margin: 20px;*/
 
 }
 
 .cel-dk{
+
     display: none;
+
 }
+
 .element{
 
-  shape-outside: polygon(0 80px, 100% 200px, 0 200px);
-  width: 100%;
-  height: 200px;
-  float: left;
-  z-index: 20;
-  opacity: .2;
-  shape-margin: 50px;
-  shape-image-threshold: 0.5;
-  
-  
+    shape-outside: polygon( 0 10%, 100% 10%, 100% 53%);
+    -webkit-shape-outside: polygon( 0 10%, 100% 10%, 100% 53%);
+    clip-path: polygon(0 10%, 100% 10%, 100% 53%);
+    width: 50%;
+    height: 110px;
+    float: right;
+    shape-margin: 2%;
+    
 }
 
 .outside-up{
 
-    shape-outside: polygon(0 0, 100% 0,100% 90px);
-    width: 100%;
-    height: 90px;
-    float: right;
-    opacity: .2;
-    
-    shape-image-threshold: 0.5;
+    -webkit-shape-outside: polygon(0 63%, 100% 100%, 0 100%);
+    shape-outside: polygon(0 63%, 100% 100%, 0 100%);
+    clip-path: polygon(0 63%, 100% 100%, 0 100%);
+    shape-margin: 3%;
+    width: 50%;
+    height: 120px;
+    float: left;
+        
 }
 
-.h6-dk{
-    display: none;
+.cel-title{
+
+    font-family: 'Times New Roman', Times, serif;
+    font-size: calc(0.6vw + 12px);
+    font-weight: 700;
+    font-style: italic;
+
 }
 
-.botones{
+.btn-side{
 
     display: none;
     
+}
+
+.p-dk{
+
+    display: none;
+
 }
 
 
