--- a/css/desktop.css
+++ b/css/desktop.css
@@ -3,14 +3,11 @@
 
     .cabecera {
         
-        background-color: red;
         width: calc(100% - 82px);
         clip-path:polygon(0 0, 100% 0, 100% 100%, 0% 90%);
         margin-bottom: 0;
        /*margin-right: 0;*/
-        padding-bottom: 12%;
-        shape-outside: none;
-        float: initial; 
+        padding-bottom: 12%; 
         margin-top: 0;
         
     }
@@ -61,6 +58,7 @@
 
         background-color: white;
         color: black;
+        
     }
 
     #menu li a{
@@ -94,11 +92,6 @@
 
     }
 
-    /*main{
-
-        margin-top: 0;
-    }*/
-  
     /*.banner{
 
     }*/
@@ -114,6 +107,28 @@
         display: block;
         width: 65%;
         opacity: 0.3;
+       /* box-shadow: inset 0 0 0.5em blue;*/
+        position: relative;       
+        z-index: -1;
+        
+    }
+
+    .chairs-desktop-img{
+
+        width: 100%;
+
+    }
+
+    #chairs-desktop-after {
+
+        content: "";
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        box-shadow: inset 4em 0 2em -2em red;
+        top: 0;
+        left: 0;
+        z-index: 1;
 
     }
 
@@ -158,18 +173,37 @@
 
     #titulo-carrusel{
 
-        color:white;
-        font-family: 'Oswald', sans-serif;
-        font-weight: 900;
         font-size: 30px;
+        margin-left: 30px;
 
     }
 
-    .img-container{
-
+    #po{
+        
         margin-left: 20px;
-        padding-right: 0;
-        overflow: initial;
+
+    }
+
+    #items-wrapper {
+        
+        width: calc((100%) * 10);
+        position: relative;
+        left: calc(-100%);
+
+    }
+
+    #items-wrapper.shifting {
+        
+        transition: left .3s ease-out;
+        
+    }
+
+    .sliding{
+        
+        /*margin-left: 0;*/
+        margin-right: 0;
+        width: 10%;
+        position: relative;
 
     }
 
@@ -196,6 +230,7 @@
         font-family: 'Poppins', sans-serif;
         font-size: 40px;
         color: white;
+        cursor: pointer;
        
     }
 
@@ -208,13 +243,7 @@
         
     }
     
-    .element, .outside-up{
-
-        display: none;
-
-    }
-
-    .cel-img{
+    .element, .outside-up, .cel-img, .p-mov{
 
         display: none;
 
@@ -244,12 +273,6 @@
         
     }
 
-    .p-mov{
-
-        display:none;
-
-    }
-
     .p-dk{
 
         display: block;
@@ -263,7 +286,6 @@
     .btn-side{
         
         display: block;
-        font-size: 4em;
         width: 82px;
         
     }
@@ -274,17 +296,49 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-
+        width: 82px;
+        
     }
-
+    
     .botones div{
-
+        
+        /*width: 10px;*/
+        font-size: 4em;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: #ff0000;
+        height: 2em;
+        
+    }
+    
+    .rojo, .azul, .verde{
+        
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
     }
 
+    .rojo{
+
+        color: #ff0000;
+        
+    }
+
+    .azul{
+
+        color: rgb(60, 31, 226);
+        
+    }
+    
+    .verde{
+
+        color: green;
+        
+    }
+    
 
 }
